--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -2,70 +2,139 @@
 @use "../variables" as v;
 
 .footer {
-  background-color: v.$color-dark-graphite;
-  color: v.$color-light-silver;
-  padding: 40px 0 20px;
+  background-color: v.$color-blue-graphite;
+  color: v.$color-off-white;
+  padding: 60px 0 40px;
 
-  &__container {
-    max-width: v.$container-width;
-    margin: 0 auto;
-    padding: 0 v.$gutter;
+  @media (max-width: v.$breakpoint-tablet) {
+    padding: 40px 0 30px;
   }
 
-  &__top {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid color.adjust(v.$color-light-silver, $alpha: -0.8);
-    margin-bottom: 20px;
+  @media (max-width: v.$breakpoint-mobile) {
+    padding: 30px 0 20px;
   }
 
-  &__bottom {
-    text-align: center;
-    font-size: 14px;
+  .container {
+    position: relative;
   }
 
-  &__title {
-    color: v.$color-milky;
-    margin-bottom: 15px;
-    font-size: 18px;
-  }
-
-  &__nav {
+  .footer-content {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    @media (max-width: v.$breakpoint-tablet) {
+      flex-direction: column;
+      gap: 30px;
+    }
+  }
+
+  .footer-section {
+    flex: 1;
+    margin-right: 30px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    @media (max-width: v.$breakpoint-tablet) {
+      margin-right: 0;
+    }
+  }
+
+  .footer-title {
+    color: v.$color-light-gray;
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    font-weight: 600;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -8px;
+      left: 0;
+      width: 40px;
+      height: 2px;
+      background-color: v.$color-medium-gray;
+    }
+  }
+
+  .footer-menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      margin-bottom: 12px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
 
     a {
-      color: v.$color-light-silver;
-      text-decoration: none;
-      transition: color 0.3s ease;
+      color: v.$color-off-white;
+      font-size: 14px;
+      transition: v.$transition-default;
+      letter-spacing: 0.3px;
 
       &:hover {
-        color: v.$color-silver;
+        color: v.$color-light-gray;
+        padding-left: 5px;
       }
     }
   }
 
-  &__contact {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  .contacts-section {
+    flex: 1.5;
+
+    @media (max-width: v.$breakpoint-tablet) {
+      flex: 1;
+    }
   }
 
-  &__social {
-    display: flex;
-    gap: 15px;
-    margin-top: 10px;
+  .contact-info {
+    p {
+      margin: 0 0 10px;
+      font-size: 14px;
+      line-height: 1.6;
+    }
 
-    a {
-      color: v.$color-light-silver;
-      font-size: 20px;
-      transition: color 0.3s ease;
+    .address {
+      position: relative;
+      padding-left: 25px;
 
-      &:hover {
-        color: v.$color-milky;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 3px;
+        width: 16px;
+        height: 16px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23acbbbd'%3E%3Cpath d='M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z'/%3E%3C/svg%3E");
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
+
+    .phone-number {
+      position: relative;
+      padding-left: 25px;
+      font-weight: 500;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 3px;
+        width: 16px;
+        height: 16px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23acbbbd'%3E%3Cpath d='M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z'/%3E%3C/svg%3E");
+        background-size: contain;
+        background-repeat: no-repeat;
       }
     }
   }
