--- a/src/components/main/ActivityDirections/ActivityDirections.scss
+++ b/src/components/main/ActivityDirections/ActivityDirections.scss
@@ -99,6 +99,7 @@
         );
         color: v.$color-off-white;
         transition: all 0.4s ease;
+        box-sizing: border-box;
       }
 
       .activity-title {
@@ -108,6 +109,8 @@
         font-weight: 600;
         margin: 0;
         transition: all 0.3s ease;
+        word-wrap: break-word;
+        width: 100%;
       }
 
       .activity-description {
@@ -117,6 +120,9 @@
         transition: all 0.4s ease;
         font-size: 14px;
         line-height: 1.5;
+        word-wrap: break-word;
+        width: 100%;
+        box-sizing: border-box;
       }
     }
   }
