--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -42,7 +42,7 @@
   .logo {
     font-family: v.$font-logo;
     font-size: 26px;
-    font-weight: 800; // Extra bold font for logo
+    font-weight: 800;
     color: v.$color-off-white;
     letter-spacing: 0.5px;
     transition: v.$transition-default;
@@ -65,8 +65,7 @@
     margin: 0 20px;
 
     @media (max-width: v.$breakpoint-tablet) {
-      width: 100%;
-      margin: 15px 0;
+      display: none;
     }
   }
 
