--- a/src/components/main/ActivityDirections/ActivityDirections.scss
+++ b/src/components/main/ActivityDirections/ActivityDirections.scss
@@ -2,7 +2,7 @@
 
 .activity-directions {
   padding: 50px 0;
-  background-color: v.$color-off-white;
+  background: linear-gradient(170deg, v.$color-off-white 0%, #e6ebee 100%);
 
   .container {
     max-width: v.$container-width;
