--- a/src/components/main/Benefits/Benefits.scss
+++ b/src/components/main/Benefits/Benefits.scss
@@ -2,7 +2,7 @@
 
 .benefits {
   padding: 80px 0;
-  background-color: v.$color-off-white;
+  background: linear-gradient(180deg, #e6ebee 0%, #f0f3f5 100%);
   color: v.$color-dark-blue;
 
   .container {
