Fix background color at about page

--- a/src/styles/components/about/_about.scss
+++ b/src/styles/components/about/_about.scss
@@ -19,8 +19,8 @@
   color: v.$graphite-medium;
   background: linear-gradient(
     145deg,
-    v.$milk 0%,
-    v.$almost-white 85%,
+    v.$light-gray 0%,
+    v.$milk 85%,
     rgba(v.$dark-blue, 0.03) 100%
   );
   padding: 90px 0 60px;
