--- a/src/styles/pages/_Main.scss
+++ b/src/styles/pages/_Main.scss
@@ -5,7 +5,6 @@
   overflow-x: hidden;
 }
 
-// Анімації елементів при скролі
 .animate-on-scroll {
   opacity: 0;
   transition: transform 0.8s ease, opacity 0.8s ease;
@@ -61,8 +60,8 @@
       height: 100%;
       background: linear-gradient(
         to bottom,
-        rgba(v.$graphite-dark, 0.7) 0%,
-        rgba(v.$graphite-dark, 0.5) 100%
+        rgba(5, 22, 33, 0.7) 0%,
+        rgba(5, 22, 33, 0.5) 100%
       );
       z-index: 2;
     }
@@ -80,24 +79,25 @@
     justify-content: center;
 
     @media (max-width: v.$breakpoint-sm) {
-      padding: 0 v.$spacing-md;
+      padding: 0 20px;
     }
   }
 
   .hero-content {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    padding: 0 v.$spacing-md;
+    padding: 0 20px;
   }
 
   .hero-text-container {
-    padding: v.$spacing-2xl 0;
+    padding: 40px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-top: v.$spacing-4xl;
+    justify-content: center;
   }
 
   .hero-title {
@@ -105,6 +105,7 @@
     font-size: v.$font-size-4xl;
     font-weight: v.$font-weight-bold;
     margin-bottom: v.$spacing-xl;
+    margin-top: 70px;
     color: v.$milk;
     line-height: 1.2;
     position: relative;
@@ -137,7 +138,7 @@
     max-width: 950px;
     font-size: v.$font-size-md;
     line-height: 1.6;
-    margin-bottom: v.$spacing-2xl;
+    margin-bottom: 35px;
     color: v.$milk;
     max-width: 80%;
     font-weight: v.$font-weight-regular;
@@ -153,19 +154,18 @@
     display: inline-block;
     background-color: transparent;
     color: v.$milk;
-    padding: v.$spacing-md v.$spacing-xl;
+    padding: 15px 35px;
     font-family: v.$font-primary;
-    font-size: v.$font-size-sm;
+    font-size: 15px;
     font-weight: v.$font-weight-semibold;
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 1px;
     position: relative;
     overflow: hidden;
-    border: 2px solid v.$light-gray;
-    transition: all v.$transition-medium;
-    margin-bottom: v.$spacing-sm;
-    animation: fadeIn 1s ease 0.6s both;
+    border: 2px solid v.$color-light-gray;
+    transition: all 0.4s ease;
+    margin-bottom: 10px;
 
     &::before {
       content: "";
@@ -194,18 +194,17 @@
   width: 100%;
   max-width: 800px;
   z-index: 5;
-  margin-top: v.$spacing-xl;
+  margin-top: 30px;
 
   .stats-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: v.$spacing-md;
-    background-color: rgba(255, 255, 255, 0.1);
+    gap: 20px;
+    background-color: rgba(255, 255, 255, 0.185);
     backdrop-filter: blur(10px);
-    border-radius: v.$border-radius-lg;
+    border-radius: 10px;
     overflow: hidden;
-    border: 1px solid rgba(v.$light-gray, 0.3);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(v.$color-light-gray, 0.3);
 
     @media (max-width: v.$breakpoint-md) {
       grid-template-columns: repeat(3, 1fr);
@@ -218,8 +217,8 @@
 
   .stats-item {
     text-align: center;
-    padding: v.$spacing-xl v.$spacing-md;
-    transition: all v.$transition-fast;
+    padding: 30px 15px;
+    transition: all 0.3s ease;
     position: relative;
 
     &:not(:last-child)::after {
@@ -230,7 +229,7 @@
       transform: translateY(-50%);
       height: 60%;
       width: 1px;
-      background-color: rgba(v.$milk, 0.2);
+      background-color: rgba(v.$color-off-white, 0.2);
 
       @media (max-width: v.$breakpoint-sm) {
         display: none;
