--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -49,9 +49,28 @@
     display: flex;
     align-items: center;
 
+    &.logo-animation {
+      animation: fadeInLogo 0.6s ease forwards;
+    }
+
+    &.logo-hidden {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+
+    @keyframes fadeInLogo {
+      0% {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     a {
       color: inherit;
-
       text-decoration: none;
       display: inline-block;
       position: relative;
